# finance

./: .flake8  .gitignore  LICENSE  README.md  amazon.py  banktivity.py  core.py  ing.py  main.py  paypal.py  payslip.py  payslip_bonsenreuling.py  payslip_sap.py  pyproject.toml  tax.py  test_banktivity.py  test_main.py  typesafe.py  woz.py
.github/actions/setup/: action.yaml
.github/actions/vulnerabilities/: action.yaml
.github/workflows/: ci.yaml  vulnerabilities.yaml
finance/: alfabank.py  amazon.py  banktivity.py  core.py  ing.py  paypal.py  payslip_bonsenreuling.py  payslip_sap.py  tax.py  typesafe.py  woz.py
stubs/: chromedriver_binary.pyi
stubs/bpylist2/: archiver.pyi
stubs/bs4/: __init__.pyi  element.pyi
stubs/cryptography/hazmat/primitives/: ciphers.pyi  padding.pyi
stubs/pdfminer/: high_level.pyi  layout.pyi
stubs/selenium/webdriver/: __init__.pyi
stubs/selenium/webdriver/common/: action_chains.pyi
stubs/selenium/webdriver/remote/: webelement.pyi
stubs/srp/: __init__.pyi  _mod.pyi
