[tool.poetry]
name = "finance"
version = "0.0.1"
description = ""
authors = ["Sergey Parhomenko <sergey@parhomenko.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.12.1" # renovate github-tags:python/cpython:^v(?<version>.*)$
"pdfminer.six" = "20231228"
beautifulsoup4 = "4.12.3"
bpylist2 = "4.1.1"
chromedriver-binary-auto = "0.3.1"
cryptography = "42.0.1"
dacite = "1.8.1"
inflection = "0.5.1"
more-itertools = "10.2.0"
pyotp = "2.9.0"
requests = "2.31.0"
selenium = "4.17.2"
srp = "1.0.20"

[tool.poetry.dev-dependencies]
autopep8 = "2.0.4"
black = {version = "24.1.0", allow-prereleases = true}
colorama = "0.4.6"
coverage = "7.4.1"
flake8 = "7.0.0"
flake8-black = "0.3.6"
flake8-isort = "6.1.1"
mypy = "1.8.0"
pip-audit = "2.7.0"
pytest = "8.0.0"
types-beautifulsoup4 = "4.12.0.20240106"
types-requests = "2.31.0.20240125"
types-selenium = "3.141.9"
# wemake-python-styleguide = "0.18.0"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 200
target-version = ["py310"]

[tool.isort]
line_length = 200
profile = "black"
py_version = 310

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
strict = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_expr = true
disallow_any_unimported = true
warn_unreachable = true
